# vlfs-local

./: .coverage  .env.example  .geminiignore  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/: main.py  main_test.py
src/e2e/: test_e2e.py
src/e2e/workspace-fixture/: predictable_concept.md
src/e2e/workspace-fixture/.viking/skills/: test_skill.md
src/e2e/workspace-fixture/.viking/user/memories/past_session/: old_memory.md
tests/: test_main.py
