[project]
name = "llm_council_md_archiver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hello",
    "marco-polo",
    "python-dotenv>=1.2.2",
    "vlfs-core",
    "vlfs-mcp",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hello = { workspace = true }
marco-polo = { workspace = true }
vlfs-core = { workspace = true }
vlfs-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
